--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #management.endpoint.health.show-details=always
 #management.info.env.enabled=true
 
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
